--- a/my-web.css
+++ b/my-web.css
@@ -6,8 +6,12 @@
     box-sizing: border-box;
     font-family: "poppins",sans-serif;
 }
+hr{
+    height: 20px;
+    border: 10px solid white;
+}
 section{
-    padding: 100px;
+    margin-top: 8   px;
 }
 .banner{
     position: relative;
@@ -18,6 +22,7 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 50px;
 }
 .banner h2{
     font-size: 3em;
@@ -78,6 +83,21 @@ header .logo{
     font-weight: 700;
     letter-spacing: 2px;
 }
+.pimg1 ,.pimg2,.pimg3{
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-size: cover;
+    background-repeat:no-repeat ;
+
+    background-attachment: fixed;
+}
+
+.pimg2{
+    background-image: url("../image2.jpeg");
+    min-height: 400px;
+}
+
 header ul{
     position: relative;
     display: flex;
@@ -105,39 +125,79 @@ header ul li a{
      font-weight: 600;
      font-size: 30px;
  }
+ .pimg1{
+    background-image: url("frnit.jpg");
+    min-height: 100%;
+}
+
+.about .pimg1 .ptext{
+    padding:30px 40px;
+    font-weight: 1000;
+}
  /* .about{
      background: url("frnit.jpg");
-     height: 800px;
-     width: 800%;
- } */
+     /* height: 800px;
+     width: 100%; */
+ /* } */ */
 
-.content{
+/* .content{
     display: inline-flex;
     justify-content: space-between;
     /* flex-wrap: wrap; */
 
-}
+ */
 
 /* section div{
     display: flex;
 } */
+.contentBx{
+    color: white;
+
+}
+.contentBx h2 ,.skills h2{
+    font-size: 38px;
+    color: black;
+}
+
 .contentBx h3{
-    font-size: 24px;
+    font-size: 30px;
     margin-bottom: 10px;
 
+}
+span>h2{
+    font-size: 44px;
+    color:black;
+    margin-bottom: 20px;
+}
+.skills{
+    margin-bottom: 20px;
+    color: black(68, 64, 64);
+    font-size: 20px;
+
+}
+.Experience{
+    background-color:skyblue ;
+    padding:  40px;
+    color: black;
+    line-height: 30px;
+}
+
+span .exp p{
+    font-weight: bold;
 }
 .w50{
     min-width:50%;
 }
+
 img{
     max-width: 100%;
     /* height: 400px; */
 }
 footer{
     background-color: rgba(211, 211, 211, 0.452);
-    height: 80vh;
+    height: 60vh;
     margin: 0;
-    padding: 0;
+    padding: 30px 40px;
     /* position: fixed; */
     /* top: 7; */
 }
